src/objects/LeanData__Reporting_Setting__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeanData__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Display Fields</fullName>
                </value>
                <value>
                    <fullName>Search Fields</fullName>
                </value>
                <value>
                    <fullName>Task Type</fullName>
                </value>
                <value>
                    <fullName>Event Type</fullName>
                </value>
                <value>
                    <fullName>Campaign Type</fullName>
                </value>
                <value>
                    <fullName>Account Type</fullName>
                </value>
                <value>
                    <fullName>Day Range</fullName>
                </value>
                <value>
                    <fullName>Open Opportunity Stage</fullName>
                </value>
                <value>
                    <fullName>Open Opportunity Type</fullName>
                </value>
                <value>
                    <fullName>Closed Opportunity Stage</fullName>
                </value>
                <value>
                    <fullName>Closed Opportunity Type</fullName>
                </value>
                <value>
                    <fullName>Task Status</fullName>
                </value>
                <value>
                    <fullName>Campaign Member Status</fullName>
                </value>
                <value>
                    <fullName>Exclude Campaign Member Status</fullName>
                </value>
                <value>
                    <fullName>Exclude Lead Status</fullName>
                </value>
                <value>
                    <fullName>Opportunity Created Filter</fullName>
                </value>
                <value>
                    <fullName>Opportunity Closed Filter</fullName>
                </value>
                <value>
                    <fullName>Exclude Opportunity Type</fullName>
                </value>
                <value>
                    <fullName>Exclude Opportunity Stage</fullName>
                </value>
                <value>
                    <fullName>Delete All Bulk Campaigns</fullName>
                </value>
                <value>
                    <fullName>Unchecked Campaigns</fullName>
                </value>
                <value>
                    <fullName>Exclude Campaign Type</fullName>
                </value>
                <value>
                    <fullName>Campaign Type Weighting On</fullName>
                </value>
                <value>
                    <fullName>Campaign Member Status Weighting On</fullName>
                </value>
                <value>
                    <fullName>Campaign Type Weight</fullName>
                </value>
                <value>
                    <fullName>Campaign Member Status Weight</fullName>
                </value>
                <value>
                    <fullName>Query Limit</fullName>
                </value>
                <value>
                    <fullName>Campaign Member Status By Campaign Type Exclusion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeanData__Labels_2__c</fullName>
        <label>Labels 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Labels__c</fullName>
        <label>Labels</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Organization_Level__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Organization Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Segment__c</fullName>
        <label>Segment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Setting_Key__c</fullName>
        <externalId>true</externalId>
        <label>Setting Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LeanData__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Funnel</fullName>
                </value>
                <value>
                    <fullName>Account Scoring</fullName>
                </value>
                <value>
                    <fullName>Account View</fullName>
                </value>
                <value>
                    <fullName>Campaign Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeanData__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reporting_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Value_2__c</fullName>
        <label>Value 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Value_3__c</fullName>
        <label>Value 3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Value_4__c</fullName>
        <label>Value 4</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Value__c</fullName>
        <label>Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Reporting Setting</label>
    <listViews>
        <fullName>LeanData__All</fullName>
        <columns>LeanData__Category__c</columns>
        <columns>LeanData__Type__c</columns>
        <columns>LeanData__Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RS-{000000000}</displayFormat>
        <label>Reporting Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reporting Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>